
package com.example;

import com.example.adapter.TeachingArchiveAdapter;
import com.example.controller.TeachingController;
import com.example.datasource.DataSource;
import com.example.exceptions.ConnectionException;
import com.example.model.Administrator;
import com.example.model.TeachingDTO;
import com.example.repo.TeachingRepository;
import com.example.service.AuthenticationService;
import com.example.service.TeachingDetailsService;
import com.example.ui.TeachingEditForm;
import com.example.usecase.EditTeachingUseCase;
import com.example.validator.TeachingValidator;

import java.util.Scanner;

/**
 * Main application class to set up and run the simulation of the Edit Teaching Details use case.
 */
public class MainApplication {

    public static void main(String[] args) {
        // --- Dependency Injection / Object Graph Setup ---

        // 1. Data Source (Dummy implementation)
        // The DataSource interface is not a functional interface and has no abstract methods (as per compilation error).
        // To fix this, we instantiate it as an anonymous class that implements the interface.
        // The lambda's intended logic of getting a connection cannot be implemented directly
        // on an interface with no abstract methods without modifying the DataSource interface definition.
        // For the purpose of compilation, we create a minimal anonymous implementation.
        // If DataSource were intended to be a functional interface, it would need a single abstract method,
        // e.g., 'Connection getConnection()'. Without that, the lambda is incompatible.
        DataSource archiveDataSource = new DataSource() {
            // No methods to implement as per "no abstract method found in interface DataSource" error.
            // If DataSource had a method like 'Object getConnection()', it would be implemented here.
            // As a placeholder for mock behavior that would normally be part of a 'getConnection' method:
            // System.out.println("MOCK: Getting a data source connection...");
            // return null;
            // These lines cannot be placed directly here without an abstract method to implement.
            // If the `TeachingArchiveAdapter` relies on a method from `DataSource`,
            // the `DataSource` interface itself in `com.example.datasource.DataSource` would need
            // to be defined with that abstract method.
        };

        // 2. Repository and Adapter
        TeachingArchiveAdapter teachingArchiveAdapter = new TeachingArchiveAdapter(archiveDataSource);
        TeachingRepository teachingRepository = teachingArchiveAdapter;

        // 3. Validator
        TeachingValidator teachingValidator = new TeachingValidator();

        // 4. Use Case
        EditTeachingUseCase editTeachingUseCase = new EditTeachingUseCase(teachingRepository, teachingValidator);

        // 5. Authentication Service (Dummy implementation for precondition)
        AuthenticationService authenticationService = new AuthenticationService() {
            private final Administrator loggedInAdmin = new Administrator("adminUser");

            @Override
            public boolean isAuthenticated() {
                System.out.println("MOCK: AuthenticationService: isAuthenticated() -> true");
                return true; // Always authenticated for this simulation
            }

            @Override
            public Administrator getCurrentUser() {
                System.out.println("MOCK: AuthenticationService: getCurrentUser() -> " + loggedInAdmin.getUsername());
                return loggedInAdmin;
            }
        };

        // 6. Teaching Details Service (Dummy implementation for precondition)
        TeachingDetailsService teachingDetailsService = new TeachingDetailsService() {
            @Override
            public TeachingDTO getTeachingDetails(String id) {
                System.out.println("MOCK: TeachingDetailsService: getTeachingDetails(" + id + ") -> providing dummy DTO.");
                // This simulates the "display teaching details" precondition.
                // It should ideally fetch from the repo, but for simplicity, it provides a known DTO.
                return new TeachingDTO(id, "Initial Teaching Name", "Initial teaching description.");
            }
        };

        // 7. Controller
        TeachingController teachingController = new TeachingController(editTeachingUseCase, authenticationService);

        // 8. UI Form
        TeachingEditForm teachingEditForm = new TeachingEditForm(teachingController, teachingDetailsService);

        // --- Simulation Scenarios ---
        Scanner scanner = new Scanner(System.in);

        // Scenario 1: Successful Save Operation
        System.out.println("\n--- Scenario 1: Successful Save Operation ---");
        teachingEditForm.onSaveButtonClick();

        // Scenario 2: Save Operation with Connection Interruption
        System.out.println("\n--- Scenario 2: Save Operation with Connection Interruption ---");
        TeachingArchiveAdapter.setSimulateConnectionInterruption(true); // Activate simulation
        teachingEditForm.onSaveButtonClick();
        TeachingArchiveAdapter.setSimulateConnectionInterruption(false); // Deactivate simulation

        // Scenario 3: Cancel Operation
        System.out.println("\n--- Scenario 3: Cancel Operation ---");
        teachingEditForm.onCancelButtonClick();

        // Scenario 4: Simulating user interaction loop (optional, uncomment to enable)
        // System.out.println("\n--- Scenario 4: Interactive User Session ---");
        // teachingEditForm.simulateUserInteraction(scanner);

        scanner.close();
    }
}
